--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
 
 @theme inline {
   /* Configure your theme variables here */
-  --font-display: "Inter", "sans-serif";
+  --font-display: "Geist", "sans-serif";
   --color-primary-500: oklch(0.84 0.18 117.33);
   --spacing: 0.25rem;
   --color-sidebar-ring: var(--sidebar-ring);
